--- a/index.html
+++ b/index.html
@@ -30,150 +30,193 @@
 <body class="body">
 
     <!-- Page Header -->
-    <header>
 
-        <nav>
+    <header class="page-header">
+        <div class="container header-container">
+            <nav class="header-nav">
 
-            <a class="logo-header" href="./index.html">Web<span class="accent">Studio</span></a>
+                <a class="logo-header" href="./index.html">Web<span class="accent">Studio</span></a>
 
-            <ul>
-                <li><a class="link" href="./index.html">Studio</a></li>
-                <li><a class="link" href="">Portfolio</a></li>
-                <li><a class="link" href="">Contacts</a></li>
-            </ul>
-        </nav>
+                <ul class="header-link-list">
+                    <li><a class="link" href="./index.html">Studio</a></li>
+                    <li><a class="link" href="">Portfolio</a></li>
+                    <li><a class="link" href="">Contacts</a></li>
+                </ul>
+            </nav>
 
 
-        <address class="header-address">
-            <ul>
-                <li><a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
-
+            <address class="header-address">
+                <ul class="contacts-list">
+                    <li><a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
+
     <main>
+
         <!--Section 1-->
-        <section class="main-background">
-            <h1 class="main-logo">Effective Solutions <br />
-                for Your Business</h1>
-            <button type="button" class="main-button">Order Service</button>
+
+        <section class="main-background section-paddings">
+            <div class="container section-1">
+                <h1 class="main-logo">Effective Solutions <br />
+                    for Your Business</h1>
+                <button type="button" class="main-button">Order Service</button>
+            </div>
         </section>
+
 
         <!--Section 2-->
-        <section>
-            <h2 class="header-unvisible">Goals</h2>
-            <ul class="list-goals">
-                <li>
-                    <h3 class="goal-title">Strategy</h3>
-                    <p class="goal-text">Our goal is to identify the business <br />
-                        problem to walk away with the <br />
-                        perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="goal-title">Punctuality</h3>
-                    <p class="goal-text">Bring the key message to the <br />
-                        brand's audience for the best price <br />
-                        within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3 class="goal-title">Diligence</h3>
-                    <p class="goal-text">
-                        Research and confirm brands that <br />
-                        present the strongest digital growth <br />
-                        opportunities and minimize risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="goal-title">Technologies</h3>
-                    <p class="goal-text">Design practice focused on digital <br />
-                        experiences. We bring forth a deep <br />
-                        passion for problem-solving.</p>
-                </li>
 
-            </ul>
+        <section class="section-paddings">
+            <div class="container">
+                <h2 class="header-unvisible">Goals</h2>
+                <ul class="list-goals">
+                    <li>
+                        <h3 class="goal-title">Strategy</h3>
+                        <p class="goal-text">Our goal is to identify the business
+                            problem to walk away with the
+                            perfect and creative solution.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="goal-title">Punctuality</h3>
+                        <p class="goal-text">Bring the key message to the
+                            brand's audience for the best price
+                            within the shortest possible time.</p>
+                    </li>
+                    <li>
+                        <h3 class="goal-title">Diligence</h3>
+                        <p class="goal-text">
+                            Research and confirm brands that
+                            present the strongest digital growth
+                            opportunities and minimize risk.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="goal-title">Technologies</h3>
+                        <p class="goal-text">Design practice focused on digital
+                            experiences. We bring forth a deep
+                            passion for problem-solving.</p>
+                    </li>
+
+                </ul>
+            </div>
         </section>
+
 
         <!-- Section 3 -->
 
-        <section class="our-team-section">
-            <h2 class="our-team-title">Our Team</h2>
-            <ul class="our-team-list">
+        <section class="our-team-section section-paddings">
+            <div class="container">
+                <h2 class="our-team-title">Our Team</h2>
+                <ul class="our-team-list">
 
-                <li class="our-team-photos">
-                    <img src="./images/section_3/img-3.jpg" alt="Mark Guerrero. Product Designer" width="264" />
-                    <h3 class="our-team-names">Mark Guerrero</h3>
-                    <p class="our-team-text">Product Designer</p>
-                </li>
-                <li class="our-team-photos">
-                    <img src="./images/section_3/img-2.jpg" alt="Tom Ford. Frontend Developer" width="264" />
-                    <h3 class="our-team-names">Tom Ford</h3>
-                    <p class="our-team-text">Frontend Developer</p>
-                </li>
-                <li class="our-team-photos">
-                    <img src="./images/section_3/img-1.jpg" alt="Camila Garcia. Marketing" width="264" />
-                    <h3 class="our-team-names">Camila Garcia</h3>
-                    <p class="our-team-text">Marketing</p>
-                </li>
-                <li class="our-team-photos">
-                    <img src="./images/section_3/img.jpg" alt="Daniel Wilson. UI Designer" width="264" height="260" />
-                    <h3 class="our-team-names">Daniel Wilson</h3>
-                    <p class="our-team-text">UI Designer</p>
-                </li>
-            </ul>
+                    <li class="our-team-photos">
+                        <img src="./images/section_3/img-3.jpg" alt="Mark Guerrero. Product Designer" width="264" />
+                        <div class="our-team-underfoto">
+                            <h3 class="our-team-names">Mark Guerrero</h3>
+                            <p class="our-team-text">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="our-team-photos">
+                        <img src="./images/section_3/img-2.jpg" alt="Tom Ford. Frontend Developer" width="264" />
+                        <div class="our-team-underfoto">
+                            <h3 class="our-team-names">Tom Ford</h3>
+                            <p class="our-team-text">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="our-team-photos">
+                        <img src="./images/section_3/img-1.jpg" alt="Camila Garcia. Marketing" width="264" />
+                        <div class="our-team-underfoto">
+                            <h3 class="our-team-names">Camila Garcia</h3>
+                            <p class="our-team-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="our-team-photos">
+                        <img src="./images/section_3/img.jpg" alt="Daniel Wilson. UI Designer" width="264"
+                            height="260" />
+                        <div class="our-team-underfoto">
+                            <h3 class="our-team-names">Daniel Wilson</h3>
+                            <p class="our-team-text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
+
 
         <!-- Section 4 -->
 
-        <section>
 
-            <h2 class="our-portfolio-title">Our Portfolio</h2>
-            <ul>
-                <li>
-                    <img src="./images/section_4/banking_app.jpg" alt="Banking App" width="360">
-                    <h3 class="our-portfolio-names">Banking App</h3>
-                    <p class="our-portfolio-text">App</p>
-                </li>
-                <li>
-                    <img src="./images/section_4/cashless_payment.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="our-portfolio-names">Cashless Payment</h3>
-                    <p class="our-portfolio-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/section_4/maditation_app.jpg" alt="Meditation App" width="360">
-                    <h3 class="our-portfolio-names">Meditation App</h3>
-                    <p class="our-portfolio-text">App</p>
-                </li>
-                <li>
-                    <img src="./images/section_4/taxi_service.jpg" alt="Taxi Service" width="360">
-                    <h3 class="our-portfolio-names">Taxi Service</h3>
-                    <p class="our-portfolio-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/section_4/screen_illustrations.jpg" alt="Screen Illustrations" width="360">
-                    <h3 class="our-portfolio-names">Screen Illustrations</h3>
-                    <p class="our-portfolio-text">Design</p>
-                </li>
-                <li>
-                    <img src="./images/section_4/online_courses.jpg" alt="Online Courses" width="360">
-                    <h3 class="our-portfolio-names">Online Courses</h3>
-                    <p class="our-portfolio-text">Marketing</p>
-                </li>
-            </ul>
+        <section class="section-paddings">
+            <div class="container">
+                <h2 class="our-portfolio-title">Our Portfolio</h2>
+                <ul class="our-portfolio-list">
+                    <li>
+                        <img src="./images/section_4/banking_app.jpg" alt="Banking App" width="360">
+                        <div class="our-portfolio-underfoto">
+                            <h3 class="our-portfolio-names">Banking App</h3>
+                            <p class="our-portfolio-text">App</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./images/section_4/cashless_payment.jpg" alt="Cashless Payment" width="360">
+                        <div class="our-portfolio-underfoto">
+                            <h3 class="our-portfolio-names">Cashless Payment</h3>
+                            <p class="our-portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./images/section_4/maditation_app.jpg" alt="Meditation App" width="360">
+                        <div class="our-portfolio-underfoto">
+                            <h3 class="our-portfolio-names">Meditation App</h3>
+                            <p class="our-portfolio-text">App</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./images/section_4/taxi_service.jpg" alt="Taxi Service" width="360">
+                        <div class="our-portfolio-underfoto">
+                            <h3 class="our-portfolio-names">Taxi Service</h3>
+                            <p class="our-portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./images/section_4/screen_illustrations.jpg" alt="Screen Illustrations" width="360">
+                        <div class="our-portfolio-underfoto">
+                            <h3 class="our-portfolio-names">Screen Illustrations</h3>
+                            <p class="our-portfolio-text">Design</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./images/section_4/online_courses.jpg" alt="Online Courses" width="360">
+                        <div class="our-portfolio-underfoto">
+                            <h3 class="our-portfolio-names">Online Courses</h3>
+                            <p class="our-portfolio-text">Marketing</p>
+                        </div>
+                    </li>
+                </ul>
 
-
+            </div>
         </section>
+
     </main>
 
     <!-- Footer -->
+
     <footer class="footer">
-        <a href="./index.html" class="logo-footer">Web<span class="accent-footer">Studio</span></a>
-        <p class="text-footer">Increase the flow of customers and <br />
-            sales for your business with digital <br />
-            marketing & growth solutions.</p>
+        <div class="container">
+            <div class="footer-all-text">
+                <a href="./index.html" class="logo-footer">Web<span class="accent-footer">Studio</span></a>
+                <p class="text-footer">Increase the flow of customers and
+                    sales for your business with digital
+                    marketing & growth solutions.</p>
+            </div>
+        </div>
     </footer>
+
 </body>
 
 </html>
