--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.0/modern-normalize.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://fonts.gstatic.com">
 
@@ -74,20 +76,20 @@
             <div class="container">
                 <h2 class="header-unvisible">Goals</h2>
                 <ul class="list-goals">
-                    <li>
+                    <li class="element-list-goals">
                         <h3 class="goal-title">Strategy</h3>
                         <p class="goal-text">Our goal is to identify the business
                             problem to walk away with the
                             perfect and creative solution.
                         </p>
                     </li>
-                    <li>
+                    <li class="element-list-goals">
                         <h3 class="goal-title">Punctuality</h3>
                         <p class="goal-text">Bring the key message to the
                             brand's audience for the best price
                             within the shortest possible time.</p>
                     </li>
-                    <li>
+                    <li class="element-list-goals">
                         <h3 class="goal-title">Diligence</h3>
                         <p class="goal-text">
                             Research and confirm brands that
@@ -95,7 +97,7 @@
                             opportunities and minimize risk.
                         </p>
                     </li>
-                    <li>
+                    <li class="element-list-goals">
                         <h3 class="goal-title">Technologies</h3>
                         <p class="goal-text">Design practice focused on digital
                             experiences. We bring forth a deep
@@ -155,42 +157,42 @@
             <div class="container">
                 <h2 class="our-portfolio-title">Our Portfolio</h2>
                 <ul class="our-portfolio-list">
-                    <li>
+                    <li class="element-our-portfolio-list">
                         <img src="./images/section_4/banking_app.jpg" alt="Banking App" width="360">
                         <div class="our-portfolio-underfoto">
                             <h3 class="our-portfolio-names">Banking App</h3>
                             <p class="our-portfolio-text">App</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="element-our-portfolio-list">
                         <img src="./images/section_4/cashless_payment.jpg" alt="Cashless Payment" width="360">
                         <div class="our-portfolio-underfoto">
                             <h3 class="our-portfolio-names">Cashless Payment</h3>
                             <p class="our-portfolio-text">Marketing</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="element-our-portfolio-list">
                         <img src="./images/section_4/maditation_app.jpg" alt="Meditation App" width="360">
                         <div class="our-portfolio-underfoto">
                             <h3 class="our-portfolio-names">Meditation App</h3>
                             <p class="our-portfolio-text">App</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="element-our-portfolio-list">
                         <img src="./images/section_4/taxi_service.jpg" alt="Taxi Service" width="360">
                         <div class="our-portfolio-underfoto">
                             <h3 class="our-portfolio-names">Taxi Service</h3>
                             <p class="our-portfolio-text">Marketing</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="element-our-portfolio-list">
                         <img src="./images/section_4/screen_illustrations.jpg" alt="Screen Illustrations" width="360">
                         <div class="our-portfolio-underfoto">
                             <h3 class="our-portfolio-names">Screen Illustrations</h3>
                             <p class="our-portfolio-text">Design</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="element-our-portfolio-list">
                         <img src="./images/section_4/online_courses.jpg" alt="Online Courses" width="360">
                         <div class="our-portfolio-underfoto">
                             <h3 class="our-portfolio-names">Online Courses</h3>
@@ -208,12 +210,12 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-all-text">
-                <a href="./index.html" class="logo-footer">Web<span class="accent-footer">Studio</span></a>
-                <p class="text-footer">Increase the flow of customers and
-                    sales for your business with digital
-                    marketing & growth solutions.</p>
-            </div>
+
+            <a href="./index.html" class="logo-footer">Web<span class="accent-footer">Studio</span></a>
+            <p class="text-footer">Increase the flow of customers and
+                sales for your business with digital
+                marketing & growth solutions.</p>
+
         </div>
     </footer>
 
