--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <!--Section 1-->
 
-        <section class="main-background section-paddings">
+        <section class="main-background">
             <div class="container section-1">
                 <h1 class="main-logo">Effective Solutions <br />
                     for Your Business</h1>
